--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
-wsidicom.egg-info*
 dist*
 Pipfile.lock*
 .mypy_cache*
 .pytest_cache*
 *__pycache__**
 .vscode
-.ipynb_checkpoints
-*.ipynb
-*.dcm
+typings
