--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,19 @@ name = "wsidicom"
 version = "0.1.0"
 description = "Tools for handling DICOM based whole scan images"
 authors = ["Erik O Gabrielsson <erik.o.gabrielsson@sectra.com>"]
+licence = "Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/imi-bigpicture/wsidicom"
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: Apache Software License",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Topic :: Scientific/Engineering :: Medical Science Apps."
+]
 
 [tool.poetry.dependencies]
 python = "^3.7"
