--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,13 @@ authors = ["Erik O Gabrielsson <erik.o.gabrielsson@sectra.com>"]
 licence = "Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/imi-bigpicture/wsidicom"
+keywords = "whole slide image, digital pathology, annotations, dicom"
 classifiers = [
     "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: Apache Software License",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
+    "Intended Audience :: Healthcare Industry",
+    "Operating System :: OS Independent".
     "Topic :: Scientific/Engineering :: Medical Science Apps."
 ]
 
