Tests for writing

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
-markers = 
+markers =
     unittest: add a test as a unittest
     integration: add a test as a integration test
+    save: add a test as a save test
