--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,4 @@ markers =
     unittest: add a test as a unittest
     integration: add a test as a integration test
     save: add a test as a save test
+    annotation: add a test as an annotation test
