--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,6 +10,23 @@ on:
     branches: [ main ]
 
 jobs:
+  cache_test_images:
+    name: cache test images
+    runs-on: ubuntu-latest
+    steps:
+      - name: Load test images from cache
+        id: cache-test-images
+        uses: actions/cache@v2
+        with:
+          key: test-image-cache-v1.0.1
+          path: SLIDE_FOLDER
+      - name: Load test images
+        if: steps.cache-test-images.outputs.cache-hit != 'true'
+        # we should call a script provided in the repo
+        run: |
+          mkdir -p tests/testdata/slides
+          python tests/download_test_images.py
+
   build:
 
     runs-on: ubuntu-latest
@@ -37,5 +54,23 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=80 --statistics
+        
+    # cross os caching support, see: https://github.com/actions/cache/issues/591
+    - name: "Use GNU tar instead BSD tar"
+      if: matrix.os == 'windows-latest'
+      shell: cmd
+      run: echo C:\Program Files\Git\usr\bin>>"%GITHUB_PATH%"
+    - name: Load test images from cache
+      id: cache-test-images
+      uses: actions/cache@v2
+      with:
+        key: test-image-cache-v1.0.1
+        path: SLIDE_FOLDER
+    - name: Check test images are loaded
+      if: steps.cache-test-images.outputs.cache-hit != 'true'
+      uses: actions/github-script@v3
+      with:
+        script: |
+          core.setFailed('test images were not cached')
     - name: Test with pytest, only unittests as there is no test data yet.
       run: python -m poetry run pytest -m unittest
