--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,13 +10,12 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  tests:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8"]
-        # python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v2
@@ -48,5 +47,5 @@ jobs:
       run: |
           mkdir -p tests/testdata/slides
           python tests/download_test_images.py
-    - name: Test with pytest, only unittests as there is no test data yet.
-      run: python -m poetry run pytest -m unittest
+    - name: Test with pytest.
+      run: python -m poetry run pytest
