Correct cache ID

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -44,9 +44,8 @@ jobs:
         key: test-images-cache-0.1
         path: tests/testdata/slides
     - name: Download test images
-      if: steps.cache-test-images.outputs.cache-hit != 'true'
-      run: |
-        mkdir -p tests/testdata/slides
+      if: steps.test-images-cache.outputs.cache-hit != 'true'
+      run:
         python tests/download_test_images.py
     - name: Test with pytest.
       run: python -m poetry run pytest
