Only run on main

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -2,7 +2,7 @@ name: Python package
 
 on:
   push:
-    branches: [ main, public-testdat ]
+    branches: [ main ]
   pull_request:
     branches: [ main ]
 
