--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: Python package
 
 on:
@@ -10,14 +7,32 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  cache_test_images:
+    name: cache test images
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - name: Load test images from cache
+      id: test-images-cache
+      uses: actions/cache@v2
+      with:
+        key: test-images-cache-0.2
+        path: tests/testdata/slides
+    - name: Download test images if not cached
+      if: steps.test-images-cache.outputs.cache-hit != 'true'
+      run:
+        python tests/download_test_images.py
 
+  tests:
+    name: Run tests ${{ matrix.os }}::py${{ matrix.python-version }}
+    needs: [ cache_test_images ]
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 6
       fail-fast: false
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10"]
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -37,5 +52,5 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=80 --statistics
-    - name: Test with pytest, only unittests as there is no test data yet.
-      run: python -m poetry run pytest -m unittest
+    - name: Test with pytest.
+      run: python -m poetry run pytest
