--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ pytest = "^6.0.0"
 pytest-watch = "^4.2.0"
 xmltodict = "^0.12.0"
 shapely = "^1.7.0"
+pycodestyle = "^2.8.0"
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
