--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ xmltodict = "^0.12.0"
 shapely = "^1.7.0"
 pycodestyle = "^2.8.0"
 flake8 = "^4.0.1"
+parameterized = "^0.8.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
