--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,10 +1,6 @@
-name: Python package
+name: wsidicom pytest
 
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+on: [push, pull_request]
 
 jobs:
   cache_test_images:
