--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ numpy = "^1.22.0"
 pydicom = "^2.1.0"
 Pillow = "^9.1.1"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
 pytest-watch = "^4.2.0"
 xmltodict = "^0.12.0"
