--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ pytest-watch = "^4.2.0"
 xmltodict = "^0.12.0"
 shapely = "^1.7.0"
 pycodestyle = "^2.8.0"
+black = "^23.1.0"
 flake8 = "^4.0.1"
 parameterized = "^0.8.1"
 
