--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "wsidicom"
-version = "0.8.0"
+version = "0.9.0"
 description = "Tools for handling DICOM based whole scan images"
 authors = ["Erik O Gabrielsson <erik.o.gabrielsson@sectra.com>"]
 license = "Apache-2.0"
@@ -21,6 +21,7 @@ python = ">=3.8,<3.12"
 numpy = "^1.22.0"
 pydicom = "^2.1.0"
 Pillow = "^9.1.1"
+dicomweb-client = "^0.59.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
@@ -28,6 +29,7 @@ pytest-watch = "^4.2.0"
 xmltodict = "^0.12.0"
 shapely = "^1.7.0"
 pycodestyle = "^2.8.0"
+black = "^23.1.0"
 flake8 = "^4.0.1"
 parameterized = "^0.8.1"
 
