--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.12"
+python = "^3.8"
 numpy = "^1.22.0"
 pydicom = "^2.1.0"
 Pillow = "^9.1.1"
@@ -34,5 +34,5 @@ flake8 = "^4.0.1"
 parameterized = "^0.8.1"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=1.2.0"]
 build-backend = "poetry.core.masonry.api"
