--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ pycodestyle = "^2.8.0"
 black = "^23.1.0"
 flake8 = "^4.0.1"
 parameterized = "^0.8.1"
+codespell = "^2.2.5"
 
 [build-system]
 requires = ["poetry-core>=1.2.0"]
