--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "wsidicom"
-version = "0.11.0"
+version = "0.12.0"
 description = "Tools for handling DICOM based whole scan images"
 authors = ["Erik O Gabrielsson <erik.o.gabrielsson@sectra.com>"]
 license = "Apache-2.0"
@@ -19,8 +19,8 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.8"
 numpy = "^1.22.0"
-pydicom = "^2.1.0"
-Pillow = "^9.1.1"
+pydicom = ">=2.1.0"
+Pillow = ">=9.1.1, <11.0.0"
 dicomweb-client = "^0.59.1"
 
 [tool.poetry.group.dev.dependencies]
