--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ numpy = "^1.22.0"
 pydicom = ">=2.1.0"
 Pillow = ">=9.1.1, <11.0.0"
 dicomweb-client = "^0.59.1"
+highdicom = "^0.21.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
