--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,12 +17,13 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.9"
 numpy = "^1.22.0"
 pydicom = ">=2.1.0"
 Pillow = ">=9.1.1, <11.0.0"
 dicomweb-client = "^0.59.1"
 highdicom = "^0.21.1"
+imagecodecs = "^2023.9.18"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
