--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ Pillow = ">=9.1.1, <11.0.0"
 dicomweb-client = "^0.59.1"
 highdicom = "^0.21.1"
 imagecodecs = "^2023.9.18"
+pylibjpeg-rle = "^1.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
