--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,11 +20,15 @@ classifiers = [
 python = "^3.9"
 numpy = "^1.22.0"
 pydicom = ">=2.1.0"
-Pillow = ">=9.1.1, <11.0.0"
+Pillow = ">=9.1.1"
 dicomweb-client = "^0.59.1"
 highdicom = "^0.21.1"
-imagecodecs = "^2023.9.18"
-pylibjpeg-rle = "^1.3.0"
+imagecodecs = { version = "^2023.9.18", optional = true }
+pylibjpeg-rle = { version = "^1.3.0", optional = true }
+
+[tool.poetry.extras]
+imagecodecs = ["imagecodecs"]
+rle = ["pylibjpeg-rle"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
