More compact selection for encoder

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,8 +39,7 @@ pycodestyle = "^2.8.0"
 black = "^23.1.0"
 flake8 = "^4.0.1"
 codespell = "^2.2.5"
-# wsidicom-data =  "^0.1.0"
-wsidicom-data = {path = "../wsidicom-data", develop = true}
+wsidicom-data =  "^0.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.2.0"]
