Simplify pytest markers

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,4 @@
 [pytest]
 markers =
     unittest: add a test as a unittest
-    integration: add a test as a integration test
-    save: add a test as a save test
-    annotation: add a test as an annotation test
+    integration: add a test as an integration test
