--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dicomweb-client = "^0.59.1"
 marshmallow = "^3.20.1"
 imagecodecs = { version = "^2024.1.1", optional = true }
 pylibjpeg-rle = { version = "^1.3.0", optional = true }
+fsspec = "^2023.12.2"
 
 [tool.poetry.extras]
 imagecodecs = ["imagecodecs"]
