--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ marshmallow = "^3.20.1"
 imagecodecs = { version = "^2024.1.1", optional = true }
 pylibjpeg-rle = { version = "^1.3.0", optional = true }
 fsspec = "^2023.12.2"
+universal-pathlib = "^0.1.4"
 
 [tool.poetry.extras]
 imagecodecs = ["imagecodecs"]
