--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,10 +26,14 @@ dicomweb-client = "^0.59.1"
 marshmallow = "^3.20.1"
 imagecodecs = { version = "^2024.1.1", optional = true }
 pylibjpeg-rle = { version = "^1.3.0", optional = true }
+pyjpegls = { version = "^1.2.0", optional = true }
+pylibjpeg-openjpeg = { version = "^2.1.1", optional = true }
 
 [tool.poetry.extras]
 imagecodecs = ["imagecodecs"]
-rle = ["pylibjpeg-rle"]
+pylibjpeg-rle = ["pylibjpeg-rle"]
+pyjpegls = ["pyjpegls"]
+pylibjpeg-openjpeg = ["pylibjpeg-openjpeg"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
