--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,4 +1,4 @@
-name: wsidicom pytest
+name: pytest
 
 on: [push, pull_request]
 
@@ -12,21 +12,21 @@ jobs:
           git config --global core.autocrlf false
           git config --global core.eol lf
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Load test images from cache
-        id: cache_test_images
-        uses: actions/cache@v3
+        id: cache-test-images
+        uses: actions/cache@v4
         with:
           key: test-images-cache-${{ hashFiles('tests/download_test_images.py') }}
           path: tests/testdata/slides
           enableCrossOsArchive: true
-      - name: Download test images if not cached
-        if: steps.cache_test_images.outputs.cache-hit != 'true'
+      - name: Download test images
+        if: ${{ steps.cache-test-images.outputs.cache-hit != 'true' }}
         run: python tests/download_test_images.py
 
   tests:
-    name: Run tests ${{ matrix.os }}::py${{ matrix.python-version }}
     needs: [cache_test_images]
+    name: pytest ${{ matrix.os }}::py${{ matrix.python-version }}
     runs-on: ${{ matrix.os }}
     strategy:
       max-parallel: 6
@@ -39,40 +39,31 @@ jobs:
         run: |
           git config --global core.autocrlf false
           git config --global core.eol lf
-      - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Use GNU tar instead BSD tar
-        if: matrix.os == 'windows-latest'
-        shell: cmd
-        run: echo C:\Program Files\Git\usr\bin>>"%GITHUB_PATH%"
       - name: Load test images from cache
-        id: cache-test-images
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           key: test-images-cache-${{ hashFiles('tests/download_test_images.py') }}
           path: tests/testdata/slides
           enableCrossOsArchive: true
-      - name: Check test images are loaded
-        if: steps.cache-test-images.outputs.cache-hit != 'true'
-        uses: actions/github-script@v6
-        with:
-          script: |
-            core.setFailed('test images were not cached')
+          fail-on-cache-miss: true
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install flake8 pytest
           python -m pip install poetry
       - name: Install Application
         run: python -m poetry install --all-extras
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          python -m poetry run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=80 --statistics
+          python -m poetry run flake8 . --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
+
       - name: Test with pytest.
         run: python -m poetry run pytest
