--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "wsidicom"
-version = "0.19.1"
+version = "0.20.0"
 description = "Tools for handling DICOM based whole scan images"
 authors = ["Erik O Gabrielsson <erik.o.gabrielsson@sectra.com>"]
 license = "Apache-2.0"
@@ -26,6 +26,8 @@ dicomweb-client = "^0.59.1"
 marshmallow = "^3.20.1"
 imagecodecs = { version = "^2024.1.1", optional = true }
 pylibjpeg-rle = { version = "^1.3.0", optional = true }
+fsspec = "^2024.2.0"
+universal-pathlib = "^0.2.1"
 pyjpegls = { version = "^1.2.0", optional = true }
 pylibjpeg-openjpeg = { version = "^2.1.1", optional = true }
 
