--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -17,4 +17,4 @@ jobs:
         uses: py-actions/flake8@v2
         with:
           exclude: ".git,__pycache__,.pytest_cache,dist"
-          ignore: "E121,E123,E126,E226,E24,E704,W503,W504,E501,E203"
+          ignore: "E121,E123,E126,E226,E24,E704,W503,W504,E501,E203,F841"
