--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "wsidicom"
-version = "0.20.5"
+version = "0.20.6"
 description = "Tools for handling DICOM based whole scan images"
 authors = ["Erik O Gabrielsson <erik.o.gabrielsson@sectra.com>"]
 license = "Apache-2.0"
@@ -20,7 +20,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.9"
 numpy = "^1.22.0"
-pydicom = ">=2.1.0"
+pydicom = ">=2.1.0,<3.0.0"
 Pillow = ">=9.1.1"
 dicomweb-client = "^0.59.1"
 marshmallow = "^3.20.1"
