--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "wsidicom"
-version = "0.21.0"
+version = "0.21.1"
 description = "Tools for handling DICOM based whole scan images"
 authors = ["Erik O Gabrielsson <erik.o.gabrielsson@sectra.com>"]
 license = "Apache-2.0"
@@ -24,7 +24,7 @@ pydicom = ">=3.0.0"
 Pillow = ">=9.1.1"
 dicomweb-client = "^0.59.1"
 marshmallow = "^3.20.1"
-imagecodecs = { version = "^2024.1.1", optional = true }
+imagecodecs = { version = "^2024.1.1, !=2024.9.22", optional = true }
 pylibjpeg-rle = { version = "^1.3.0", optional = true }
 fsspec = "^2024.2.0"
 universal-pathlib = "^0.2.1"
