--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install fsspec, requests, aiohttp
+          python -m pip install fsspec requests aiohttp
       - name: Download test images
         if: ${{ steps.cache-test-images.outputs.cache-hit != 'true' }}
         run: python tests/download_test_images.py
