--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dicomweb-client = "^0.59.2"
 marshmallow = "^3.20.1"
 imagecodecs = { version = "^2024.1.1, !=2024.9.22", optional = true }
 pylibjpeg-rle = { version = "^1.3.0", optional = true }
-fsspec = "^2024.2.0"
+fsspec = ">=2024.2.0"
 universal-pathlib = "^0.2.1"
 pyjpegls = { version = "^1.2.0", optional = true }
 pylibjpeg-openjpeg = { version = "^2.1.1", optional = true }
