--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ pylibjpeg-rle = ["pylibjpeg-rle>=1.3.0,<2.0.0"]
 pyjpegls = ["pyjpegls>=1.2.0,<2.0.0"]
 pylibjpeg-openjpeg = ["pylibjpeg-openjpeg>=2.1.1,<3.0.0"]
 
-[project.dependency-groups]
+[dependency-groups]
 dev = [
     "pytest>=7.2.0,<8.0.0",
     "pytest-watch>=4.2.0,<5.0.0",
